compilers/iac/testsuite/idl02031/tin.idl
module M {
  interface thing {
    attribute boolean abstract; // error: abstract collides with
                                // keyword abstract
    attribute boolean _abstract; // ok: abstract is an identifier
  };
};
